# linuxCamYUV

./: .gitignore  CMakeLists.txt  CaptureOneFrame.kdev4  README.md  linuxCamYUV.kdev4  main.cpp
